; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/cz80/extr_cz80.c_Cz80_Reset.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/cpu/cz80/extr_cz80.c_Cz80_Reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@CZ80_PC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Cz80_Reset(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %4 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %6 = ptrtoint i32* %5 to i64
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %8 = ptrtoint %struct.TYPE_5__* %7 to i64
  %9 = sub nsw i64 %6, %8
  %10 = call i32 @memset(%struct.TYPE_5__* %3, i32 0, i64 %9)
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %12 = load i32, i32* @CZ80_PC, align 4
  %13 = call i32 @Cz80_Set_Reg(%struct.TYPE_5__* %11, i32 %12, i32 0)
  ret void
}

declare dso_local i32 @memset(%struct.TYPE_5__*, i32, i64) #1

declare dso_local i32 @Cz80_Set_Reg(%struct.TYPE_5__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
